dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(gdivelog, 0.5.1)
AM_MAINTAINER_MODE
AM_CONFIG_HEADER(config.h)

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

AC_PROG_INTLTOOL

pkg_modules="libgnomeui-2.0,sqlite3"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

AC_CHECK_LIB(bz2,BZ2_bzopen, [], [AC_MSG_ERROR([Can't find libbz2 library])])

GETTEXT_PACKAGE=gdivelog
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package.])

dnl Add the languages which your application supports here.
ALL_LINGUAS=""
AM_GLIB_GNU_GETTEXT

plugindir=$libdir/gdivelog
AC_SUBST(plugindir)

pixmapdir=$datadir/pixmaps/$PACKAGE
AC_SUBST(pixmapdir)

AC_OUTPUT([
Makefile
src/Makefile
po/Makefile.in
gdivelog.desktop.in
gdivelog.spec
])
